# pcp-pmda-cpp

./: .cppcheck.sh  .gitignore  .travis.yml  CHANGELOG.md  CMakeLists.txt  LICENSE.md  README.md  pcp-pmda-cpp.files  pcp-pmda-cpp.includes  update.sh
api/: CMakeLists_8txt.html  Doxyfile_8md.html  Doxyfile_8md_source.html  annotated.html  atom_8hpp.html  atom_8hpp__incl.map  atom_8hpp__incl.md5  atom_8hpp_source.html  cache_8hpp.html  cache_8hpp__incl.map  cache_8hpp__incl.md5  cache_8hpp_source.html  classes.html  classpcp_1_1exception-members.html  classpcp_1_1exception.html  classpcp_1_1exception__coll__graph.map  classpcp_1_1exception__coll__graph.md5  classpcp_1_1exception__inherit__graph.map  classpcp_1_1exception__inherit__graph.md5  classpcp_1_1instance__domain-members.html  classpcp_1_1instance__domain.html  classpcp_1_1instance__domain__coll__graph.map  classpcp_1_1instance__domain__coll__graph.md5  classpcp_1_1instance__domain__inherit__graph.map  classpcp_1_1instance__domain__inherit__graph.md5  classpcp_1_1metric__cluster-members.html  classpcp_1_1metric__cluster.html  classpcp_1_1metric__cluster__coll__graph.map  classpcp_1_1metric__cluster__coll__graph.md5  classpcp_1_1metric__cluster__inherit__graph.map  classpcp_1_1metric__cluster__inherit__graph.md5  classpcp_1_1metrics__description-members.html  classpcp_1_1metrics__description.html  classpcp_1_1metrics__description__coll__graph.map  classpcp_1_1metrics__description__coll__graph.md5  classpcp_1_1metrics__description__inherit__graph.map  classpcp_1_1metrics__description__inherit__graph.md5  classpcp_1_1pmda-members.html  classpcp_1_1pmda.html  classpcp_1_1pmda__coll__graph.map  (+96 more)
api/search/: all_0.js  all_10.js  all_12.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_65.js  all_7.js  all_77.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_1.js  classes_3.js  classes_4.js  classes_65.js  classes_69.js  defines_0.js  enums_0.js  enums_1.js  enumvalues_0.js  enumvalues_1.js  files_0.js  files_1.js  files_2.js  files_3.js  files_5.js  files_6d.js  files_7.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  (+34 more)
example/: CMakeLists.txt  Makefile  benchmark.sh  valgrind.suppressions
example/simple/: .gitignore  .valgrindrc  CMakeLists.txt  Install.in  Makefile  simple.cpp
example/simplecpu/: .gitignore  CMakeLists.txt  Makefile  Remove.in  SimpleCPU.cpp  simplecpu.cpp
example/trivial/: .gitignore  CMakeLists.txt  Install.in  Makefile  Remove.in  trivial.cpp
include/: CMakeLists.txt  Doxyfile.in  Doxyfile.md
include/pcp-cpp/: atom.hpp  cache.hpp  config.hpp  exception.hpp  instance_domain.hpp  interface.hpp  map.hpp  metric_description.hpp  pmda.hpp  types.hpp  units.hpp
include/pcp-cpp/detail/: interface.hpp
package/rpm/: README.md  make-src-rpm.sh  pcp-pmda-cpp.spec
test/: CMakeLists.txt  benchmark.sh
test/functional/: CMakeLists.txt  test.sh  test_simple_export_domain.command  test_simple_export_domain.expected  test_simple_export_help.command  test_simple_export_help.expected  test_simple_export_pmns.command  test_simple_export_pmns.expected  test_simple_export_root.command  test_simple_export_root.expected  test_simple_help.alternative  test_simple_help.command  test_simple_help.expected  test_simple_open_dso.command  test_simple_open_dso.expected  test_simple_version.command  test_simple_version.expected  test_simplecpu_export_domain.command  test_simplecpu_export_domain.expected  test_simplecpu_export_help.command  test_simplecpu_export_help.expected  test_simplecpu_export_pmns.command  test_simplecpu_export_pmns.expected  test_simplecpu_export_root.command  test_simplecpu_export_root.expected  test_simplecpu_help.alternative  test_simplecpu_help.command  test_simplecpu_help.expected  test_simplecpu_help_text.command  test_simplecpu_help_text.expected  test_simplecpu_open_dso.command  test_simplecpu_open_dso.expected  test_simplecpu_version.command  test_simplecpu_version.expected  test_trivial_export_domain.command  test_trivial_export_domain.expected  test_trivial_export_help.command  test_trivial_export_help.expected  test_trivial_export_pmns.command  test_trivial_export_pmns.expected  (+11 more)
test/unit/: CMakeLists.txt  GoogleTestExternal.cmake  README.md
test/unit/src/: fake_libpcp-pmda.cpp  fake_libpcp.cpp  fake_libpcp.h  foo.cpp  main.cpp  test_atom.cpp  test_cache.cpp  test_config.cpp  test_exception.cpp  test_instance_domain.cpp  test_metric_cluster.cpp  test_metric_description.cpp  test_metrics_description.cpp  test_pmda.cpp  test_types.cpp  test_units.cpp
